Fixing font spacing

--- a/style/layout.css
+++ b/style/layout.css
@@ -14,6 +14,7 @@ html {
 body {
 	font-size: 100%;
 	font-family: MuseoSans;
+	letter-spacing: -1px;
 }
 
 #demo {
